--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/fire": "^5.1.3",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "firebase": "^6.0.2",
+    "ngx-bootstrap": "^4.1.1",
+    "rxjs": "6.0.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
